--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -62,3 +62,19 @@ html.dark {
     }
   }
 }
+
+// 按钮触底
+.public-btoom-btn {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  opacity: 1;
+  background: linear-gradient(0deg,
+      rgba(14, 8, 15, 0.8) 0%,
+      rgba(14, 8, 15, 0) 100%);
+
+  .public_btn {
+    margin-bottom: calc(10px + var(--ai-view-padding-bottom));
+  }
+}
